--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -17,8 +17,39 @@
                                                             <item name="component" xsi:type="string">uiComponent</item>
                                                             <item name="displayArea" xsi:type="string">shippingAdditional</item>
                                                             <item name="children" xsi:type="array">
-                                                                <item name="carrier_custom" xsi:type="array">
-                                                                    <item name="component" xsi:type="string">Elogic_VendorShipping/js/view/checkout/shipping/carrier_custom</item>
+                                                                <item name="shipping-option-wrapper" xsi:type="array">
+                                                                    <!-- Component vendor-shipping-option is used as a wrapper for content -->
+                                                                    <item name="component" xsi:type="string">Elogic_VendorShipping/js/view/checkout/shipping/vendor-shipping-option</item>
+                                                                    <item name="provider" xsi:type="string">checkoutProvider</item>
+                                                                    <item name="sortOrder" xsi:type="string">0</item>
+                                                                    <item name="children" xsi:type="array">
+                                                                        <item name="shipping-option" xsi:type="array">
+                                                                            <!-- uiComponent is used as a wrapper for select (its template will render all children as a list) -->
+                                                                            <item name="component" xsi:type="string">uiComponent</item>
+                                                                            <!-- the following display area is used in template -->
+                                                                            <item name="displayArea" xsi:type="string">additionalShippingOptionField</item>
+                                                                            <item name="children" xsi:type="array">
+                                                                                <item name="select-date" xsi:type="array">
+                                                                                    <item name="component" xsi:type="string">Elogic_VendorShipping/js/view/checkout/shipping/vendor-shipping-option-select</item>
+                                                                                    <item name="config" xsi:type="array">
+                                                                                        <!--customScope is used to group elements within a single form (e.g. they can be validated separately)-->
+                                                                                        <item name="customScope" xsi:type="string">shippingOptionSelect</item>
+                                                                                        <item name="template" xsi:type="string">ui/form/field</item>
+                                                                                        <item name="elementTmpl" xsi:type="string">ui/form/element/select</item>
+                                                                                    </item>
+                                                                                    <item name="dataScope" xsi:type="string">shippingOptionSelect.select_vendor_shipping</item>
+                                                                                    <item name="label" xsi:type="string" translate="true">Please select a vendor shipping method</item>
+                                                                                    <item name="provider" xsi:type="string">checkoutProvider</item>
+                                                                                    <item name="visible" xsi:type="boolean">true</item>
+                                                                                    <item name="validation" xsi:type="array">
+                                                                                        <item name="required-entry" xsi:type="boolean">true</item>
+                                                                                        <item name="validate-no-empty" xsi:type="boolean">true</item>
+                                                                                    </item>
+                                                                                    <item name="sortOrder" xsi:type="number">0</item>
+                                                                                </item>
+                                                                            </item>
+                                                                        </item>
+                                                                    </item>
                                                                 </item>
                                                             </item>
                                                         </item>
